# RT1064

./: .gitignore  CMakeLists.txt  MIMXRT1064xxxxx_flexspi_nor.ld  Makefile  RM_DS_Store.sh  build.sh  clean.sh  config.cmake  flags.cmake  readme.md
armgcc/: CMakeLists.txt  config.cmake  flags.cmake  output.map
components/internal_flash/: component_mcxw_flash_adapter.MIMXRT1064.cmake
components/uart/: fsl_adapter_uart.h
components/wifi_bt_module/: component_wifi_bt_module_88W8801.MIMXRT1064.cmake  component_wifi_bt_module_88W8987.MIMXRT1064.cmake  component_wifi_bt_module_IW416.MIMXRT1064.cmake  component_wifi_bt_module_IW61X.MIMXRT1064.cmake  component_wifi_bt_module_RW61X.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_am457_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_am457ma.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_am510_arduino.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_am510_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_am510ma.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_cm358_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_cm358ma.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_nm191_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_aw_nm191ma.MIMXRT1064.cmake  component_wifi_bt_module_board_frdm_rw61x.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_1xk_m2.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_1xk_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_1zm_m2.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_1zm_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_2dl_m2.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_2dl_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_2ds_m2.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_2ds_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_2el_m2.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_2el_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_murata_2ll_m2.MIMXRT1064.cmake  component_wifi_bt_module_board_rd_rw61x.MIMXRT1064.cmake  component_wifi_bt_module_board_ubx_jody_w2_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_ubx_jody_w5_m2.MIMXRT1064.cmake  component_wifi_bt_module_board_ubx_jody_w5_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_ubx_lily_w1_usd.MIMXRT1064.cmake  component_wifi_bt_module_board_ubx_maya_w1_usd.MIMXRT1064.cmake
devices/MIMXRT1064/: all_lib_device.cmake
docs/【原理图】核心板原理图 丝印图/: 【丝印图 正面 灰度】RT1064 Lite 核心板 V1.1.emf  【丝印图 正面】RT1064 Lite 核心板 V1.1.emf  【丝印图 背面 灰度】RT1064 Lite 核心板 V1.1.emf  【丝印图 背面】RT1064 Lite 核心板 V1.1.emf  【位号图 正面】RT1064 Lite 核心板 V1.1.emf  【位号图 背面】RT1064 Lite 核心板 V1.1.emf  【尺寸图】RT1064 Lite 核心板 V1.1.emf
middleware/eiq/: middleware_eiq_tensorflow_lite_micro_third_party_fft2d.cmake
middleware/littlefs/: ChangeLogKSDK.txt  middleware_littlefs_mflash.cmake
middleware/lwip/: middleware_lwip.cmake  middleware_lwip_apps_httpd_support.cmake  middleware_lwip_apps_lwiperf.cmake  middleware_lwip_apps_lwiperf_non_generated_lwipopts.cmake  middleware_lwip_apps_mdns.cmake  middleware_lwip_apps_mqtt.cmake  middleware_lwip_apps_sntp.cmake  middleware_lwip_eoe_ethernetif.cmake  middleware_lwip_eoe_ethernetif_non_generated_lwipopts.cmake  middleware_lwip_kinetis_ethernetif.cmake  middleware_lwip_kinetis_ethernetif_non_generated_lwipopts.cmake
middleware/mcu_bootloader/: middleware_mcu-boot_MIMXRT1064_drivers.cmake  middleware_mcu-boot_MIMXRT1064_sources.cmake  middleware_mcu-boot_MIMXRT1064_startup.cmake  middleware_mcu-boot_bootsources.cmake  middleware_mcu-boot_bootsources_imxrt.cmake  middleware_mcu-boot_drv_edgelock.cmake  middleware_mcu-boot_drv_flexspi_nand.cmake  middleware_mcu-boot_drv_flexspi_nor.cmake  middleware_mcu-boot_drv_microseconds.cmake  middleware_mcu-boot_drv_microseconds_lpit.cmake  middleware_mcu-boot_drv_microseconds_pit.cmake  middleware_mcu-boot_drv_ocotp.cmake  middleware_mcu-boot_drv_sdmmc.cmake  middleware_mcu-boot_drv_semc_nand.cmake  middleware_mcu-boot_drv_semc_nor.cmake  middleware_mcu-boot_drv_serial_nor_eeprom.cmake  middleware_mcu-boot_mem_flexspi_nor.cmake  middleware_mcu-boot_mem_sdmmc.cmake  middleware_mcu-boot_mem_semc_nand.cmake  middleware_mcu-boot_mem_semc_nor.cmake  middleware_mcu-boot_mem_spi_nand.cmake  middleware_mcu-boot_mem_spi_nor_eeprom.cmake  middleware_mcu-boot_sdphost.cmake  middleware_mcu-boot_src_bm_usb_hid.cmake  middleware_mcu-boot_src_startup.cmake
middleware/mcuboot_opensource/: ChangeLogKSDK.txt  SW-Content-Register.txt
middleware/usb/: middleware_mcu-boot_usb_common_header.cmake  middleware_mcu-boot_usb_device_common_header.cmake  middleware_mcu-boot_usb_device_controller_driver.cmake  middleware_mcu-boot_usb_device_hid.cmake  middleware_mcu-boot_usb_device_khci.cmake  middleware_mcu-boot_usb_device_msd.cmake  middleware_mcu-boot_usb_device_stack.cmake  middleware_mcu-boot_usb_phy.cmake  middleware_usb_device_ehci_config_header.cmake  middleware_usb_host_ehci_config_header.cmake  middleware_usb_pd_config_header.cmake  middleware_usb_phydcd_config_header.cmake
middleware/wifi_nxp/: middleware_wifi_cli.cmake  middleware_wifi_net_free_rtos_iperf.cmake
src/: CMakeLists.txt  FreeRTOSConfig_Gen.h  board.c  board.h  clock_config.c  fsl_os_abstraction_config.h  hardware_init.c  mcux_config.h  pin_mux.c  pin_mux.h  usb_device_config.h  virtual_com.c  virtual_com.h
src/Config/: CMakeLists.txt  clock_config.h  defines.h  mcux_config.h  pin_mux.h
src/Drivers/: CMakeLists.txt
src/Main/: CMakeLists.txt  MIMXRT1064-EVK.mex  board.c  board.h  main.cpp  main.h
src/Modules/: CMakeLists.txt
src/Tasks/: StaticTasksTable.cpp  TaskManager.hpp  TaskTable.hpp  Tasks.hpp
src/config/: CMakeLists.txt  FreeRTOSConfig_Gen.h
src/drivers/: CMakeLists.txt
src/main/: CMakeLists.txt  FreeRTOSConfig_Gen.h  board.c  board.h  clock_config.c  hardware_init.c  main.c  main.cpp  main.h  mcux_config.h  peripherals.c  peripherals.h  pin_mux.c
src/modules/: CMakeLists.txt
src/tasks/: CMakeLists.txt  StaticTasksTable.cpp  StaticTasksTable.hpp  tasks.cpp  tasks.h
tools/astyle/: astylerc  (+3 more)
(+245 files in other folders)
